// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/FocusManager Dynamic Children 1`] = `
<div>
  <button
    data-css-y5dqt5=""
    disabled={false}
    style={Object {}}
  >
    <span
      data-css-15b13by=""
    >
      Is tabbable
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/FocusManager No Focusable Children 1`] = `
<div
  style={
    Object {
      "color": "white",
      "margin": 100,
      "textAlign": "center",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    Tri-tip pork chop jowl, spare ribs shankle sirloin kevin. Ham hock tri-tip jowl, shank venison ham andouille rump salami swine sausage turducken beef ribs cupim jerky. Chuck swine shankle short loin tri-tip beef ribs leberkas andouille spare ribs shoulder buffalo ground round tongue sirloin bresaola. Kielbasa rump buffalo shoulder chicken beef brisket. Spare ribs drumstick tail cupim bacon filet mignon.
  </p>
</div>
`;

exports[`Storyshots Components/FocusManager Not Trapped 1`] = `
<div
  style={
    Object {
      "color": "white",
      "margin": 100,
      "textAlign": "center",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    <a
      href="#"
    >
      Tri-tip pork chop jowl
    </a>
    , spare ribs shankle sirloin kevin. Ham hock tri-tip jowl, 
    <a
      href="#"
    >
      shank venison ham
    </a>
     andouille rump salami swine sausage turducken beef ribs cupim jerky. Chuck swine shankle short loin tri-tip beef ribs leberkas andouille spare ribs shoulder buffalo ground round tongue 
    <a
      href="#"
    >
      sirloin bresaola
    </a>
    . Kielbasa rump buffalo shoulder chicken beef brisket. Spare ribs drumstick tail cupim bacon filet mignon.
  </p>
</div>
`;

exports[`Storyshots Components/FocusManager Trapped 1`] = `
<div
  style={
    Object {
      "color": "white",
      "margin": 100,
      "textAlign": "center",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    <a
      href="#"
    >
      Tri-tip pork chop jowl
    </a>
    , spare ribs shankle sirloin kevin. Ham hock tri-tip jowl, 
    <a
      href="#"
    >
      shank venison ham
    </a>
     andouille rump salami swine sausage turducken beef ribs cupim jerky. Chuck swine shankle short loin tri-tip beef ribs leberkas andouille spare ribs shoulder buffalo ground round tongue 
    <a
      href="#"
    >
      sirloin bresaola
    </a>
    . Kielbasa rump buffalo shoulder chicken beef brisket. Spare ribs drumstick tail cupim bacon filet mignon.
  </p>
</div>
`;
